--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
+    "simplex-noise": "^4.0.3",
     "tailwindcss": "^4.0.14",
     "three": "^0.174.0"
   },
